Refactor lại code